--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,11 +9,12 @@ body {
 .menu {
   padding: 0;
 }
-.menu li { display: inline-block; }
+.menu li { display: inline-block;}
 .article-meta, .menu a {
   text-decoration: none;
   background: #eee;
   padding: 5px;
+  margin: 5px;
   border-radius: 5px;
 }
 .menu, .article-meta, footer { text-align: center; }
