--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -1,5 +1,6 @@
 body {
-    font-family: Optima, Candara, Calibri, Arial, sans-serif;
+    /* font-family: Optima, Candara, Calibri, Arial, sans-serif; */
+    font-family: "Arial";
 }
 code {
     font-family: "Lucida Console", Monaco, monospace;
